# nocturnaluiv2

./: .gitignore  CONTRIBUTING.MD  LICENSE.MD  README.md  biome.json  build.sh  index.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
public/: AppIcon.icns
public/resourses/: HYDROGEN_API.js  build.sh
scripts/: changelog.mjs  version.mjs
src/: App.css  App.tsx  appVersion.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tabs.rs  updater.rs
src/components/: MainContent.tsx  Sidebar.tsx  Titlebar.tsx  TrafficLightIcons.tsx  VideoBackground.tsx  titlebar.tsx
src/components/editor/: AceEditor.tsx  (+9 more)
src/constants/: changelog.ts  navigation.ts
src/context/: ThemeContext.tsx  themeContext.tsx
src/hooks/: useHotkey.ts  useThemeClasses.ts  useThemeRawColors.ts
src/pages/: Editor.tsx  Login.tsx  Settings.tsx  settings.tsx
src/services/: base.ts  editorService.test.ts  editorService.ts  hooks.ts  index.ts  settings.service.ts  settingsService.ts  suggestion.service.ts  suggestionService.ts  suggestions.ts  tabs.service.ts  tabsService.ts  windowControlsService.ts  windowFocusService.ts  windowService.ts
src/store/: titlebarStore.ts
src/themes/: ace-default.ts  ace-frappe-mist.ts  index.ts
src/types/: components.ts  context.ts  editor.ts  global.d.ts  hooks.ts  index.ts  macos-traffic-lights.d.ts  settings.ts  store.ts  suggestions.ts  tabs.ts  tauri.ts  theme.ts  window.ts
